# ESP32-S3-USB-TO-UART-MIDI

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  globals.c  globals.h  idf_component.yml  led_rgb.c  led_rgb.h  main.c  midi_buttons.c  midi_buttons.h  midi_class_driver_txrx.c  midi_class_driver_txrx.h  midi_host_example_main_txrx.c  midi_storage.c  midi_storage.h  midi_uart.c  midi_uart.h  navigation.c  navigation.h  oled_display.c  oled_display.h  power_management.c  power_management.h  usb_daemon.c  usb_daemon.h
